completed the TrackerResponseParse